# blueprint

./: .gitignore  Master Prompt.docx  README.md  package-lock.json  package.json  philosophy.docx  ux strategy.docx
apps/api/: .env.example  .migration_check_uri  README.md  alembic.ini  config.py  pyproject.toml  worker.py
apps/api/api/: dependencies.py  errors.py  main.py
apps/api/api/v1/: auth.py  health.py  installations.py  repos.py  router.py  schemas.py  threads.py
apps/api/eval/: __init__.py
apps/api/eval/golden/: README.md
apps/api/integrations/: __init__.py
apps/api/integrations/embeddings/: __init__.py  base.py  local_hash.py  nvidia.py  openrouter.py  registry.py
apps/api/integrations/github/: __init__.py  app_jwt.py  client.py  config.py  exceptions.py  installation_tokens.py  oauth.py
apps/api/integrations/llm/: base.py  nvidia.py  registry.py
apps/api/integrations/queue/: __init__.py  rq_queue.py
apps/api/integrations/repository/: __init__.py  base.py  github_provider.py  registry.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 51198ced1801_add_file_id_to_graph_nodes_and_graph_.py  7ca7a1f87673_add_snapshot_stage_progress_tracking.py  a1f9c3e5b2d4_add_snapshot_detection_results.py  a9c4e1d70b53_add_snapshot_queue_state.py  b5e8d2c4f6a9_add_snapshot_manifest.py  b7f421a9c6de_make_repo_snapshots_commit_sha_nullable.py  c3d5e7f9a1b2_add_threads.py  c58a8fc2631c_add_content_column_to_code_chunks_fts_.py  d5e76033c384_add_installations_and_repository_.py  e4b7c9d1f3a2_embedding_dim_1536_to_1024.py  f2a6b8d0c4e1_add_snapshot_index_status.py  f7826c23e482_phase_0_schema.py
apps/api/models/: __init__.py  chunks.py  db.py  graph.py  installation.py  repository.py  thread.py  types.py
apps/api/pipeline/: __init__.py
apps/api/pipeline/agents/: __init__.py
apps/api/pipeline/graph/: __init__.py  knowledge.py  repository.py  specs.py
apps/api/pipeline/ingestion/: __init__.py  chunk_specs.py  chunking.py  discovery.py  doc_audit.py  extract.py  facts.py  heuristic_extractor.py  manifest.py  readme_extract.py  route_detection.py  stack_detection.py  treesitter.py
apps/api/pipeline/ingestion/extractors/: __init__.py  common.py  go.py  python.py  typescript_js.py
apps/api/pipeline/retrieval/: __init__.py  grounding.py  intent.py  interfaces.py
apps/api/scripts/: format_private_key.py  verify_concurrent_studies.py
apps/api/services/: __init__.py  auth_service.py  embedding_service.py  graph_service.py  ingestion_service.py  installation_service.py  pipeline_runner.py  repository_connection_service.py  repository_status_service.py  retrieval_service.py  search_service.py  snapshot_service.py  sync_service.py  thread_retrieval.py  thread_service.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/api/: conftest.py  test_auth_routes.py  test_installations_routes.py  test_repos_routes.py  test_repository_status_routes.py  test_sync_routes.py
apps/api/tests/integrations/: conftest.py
apps/api/tests/integrations/embeddings/: test_local_hash.py  test_openrouter.py  test_registry.py
apps/api/tests/integrations/github/: test_app_jwt.py  test_client.py  test_config.py  test_installation_tokens.py  test_oauth.py
apps/api/tests/integrations/llm/: test_nvidia.py
apps/api/tests/integrations/repository/: test_github_provider.py  test_registry.py
apps/api/tests/pipeline/graph/: test_knowledge.py  test_repository.py
apps/api/tests/pipeline/ingestion/: test_chunking.py  (+9 more)
apps/api/tests/services/: conftest.py  test_auth_service.py  test_concurrent_studies.py  test_installation_service.py  test_persistence_integration.py  test_pipeline_runner.py  test_repository_connection_service.py  test_retrieval_integration.py  test_search_service.py  test_snapshot_stall_budget.py  test_thread_retrieval_diagnostics.py  test_thread_service.py
docs/: PRD.md  (+6 more)
(+140 files in other folders)
