[project]
name = "blueprint-api"
version = "0.1.0"
description = "Blueprint API, worker, and Repository Intelligence pipeline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.1",
    "rq>=2.0",
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-javascript>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
    "tree-sitter-go>=0.23,<0.24",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "openai>=2.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    # Ephemeral Postgres+pgvector binary, no Docker required — the
    # fallback tests/conftest.py's db_session fixture uses when no real
    # Postgres is configured/reachable (this environment; any
    # contributor machine without Docker). CI has its own real Postgres
    # service container and never touches this. See docs/MEMORY.md.
    "pgserver>=0.1.4",
]

[tool.ruff]
line-length = 110
target-version = "py312"
# Fixture source snippets are deliberately minimal/imperfect test input
# for the extraction pipeline, not real project code.
extend-exclude = ["tests/pipeline/ingestion/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom requires `Depends(...)`/`Query(...)`
# as literal argument defaults — B008 doesn't know this pattern is safe
# (these calls are cheap, side-effect-free factories FastAPI itself
# invokes per-request, not evaluated once at import time).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Fixture source snippets are deliberately minimal/imperfect test input
# for the extraction pipeline, not real project code (mirrors the ruff
# exclusion above).
exclude = ["^\\.venv/", "^tests/pipeline/ingestion/fixtures/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "pipeline", "models", "integrations", "eval"]
